# machine_learning

./: pyproject.toml
00_Intro/: intro_01_unsolved.ipynb
02_featEng_LinReg/: ML_Lecture2_Linear.ipynb  ML_Lecture2_feature_eng.ipynb  ML_Regul.ipynb  seminar_03 _linear_regression_unsolved.ipynb
03_logReg/: ML_Lecture3_LogRes.ipynb
04_SVM_PCA/: seminar_04_logistic_regression_unsolved.ipynb
05_Trees/: seminar_06_decision_trees_unsolved.ipynb
homeworks/hw0/: hw0.ipynb
homeworks/hw1/: hw_1_EDA.ipynb  submission.csv
